--- a/src/axon_link/CMakeLists.txt
+++ b/src/axon_link/CMakeLists.txt
@@ -188,9 +188,9 @@ include_directories( ${catkin_INCLUDE_DIRS} )
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
 
-# add_executable(axon_link src/axon_link.cpp)
-# add_dependencies(axon_link axon_link_generate_messages_cpp)
-# target_link_libraries(axon_link ${catkin_LIBRARIES})
+add_executable(testSerial src/testSerial.cpp)
+add_dependencies(axon_link axon_link_generate_messages_cpp)
+target_link_libraries(axon_link ${catkin_LIBRARIES})
 
 # add_executable(joy_ctrl_axon_node src/joy_ctrl_axon_node.cpp)
 # add_dependencies(joy_ctrl_axon_node axon_link_generate_messages_cpp)
