--- a/src/axon_link/package.xml
+++ b/src/axon_link/package.xml
@@ -41,12 +41,15 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>cereal_port</build_depend>
+  <build_depend>serial</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+
   <build_depend>tf</build_depend>
   <run_depend>cereal_port</run_depend>
+   <run_depend>serial</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
