--- a/src/axon_link/package.xml
+++ b/src/axon_link/package.xml
@@ -46,8 +46,10 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>CH341SER_LINUX</build_depend>
 
   <build_depend>tf</build_depend>
+  <run_depend>CH341SER_LINUX</run_depend>
   <run_depend>cereal_port</run_depend>
    <run_depend>serial</run_depend>
   <run_depend>geometry_msgs</run_depend>
