--- a/src/testProj/CMakeLists.txt
+++ b/src/testProj/CMakeLists.txt
@@ -203,8 +203,8 @@ set(${PROJECT_NAME}_LIBRARIES
 SYSTEM/sys/sys.h)
 
 add_executable(Minibalance USER/Minibalance.c)
-target_link_libraries(Minibalance 
-                      ${${PROJECT_NAME}_LIBRARIES})
+target_link_libraries(MiniBalance 
+                      SYSTEM/sys/sys.h)
 
 # add_executable(axon_link_vonly src/axon_link_vonly.cpp)
 # add_dependencies(axon_link_vonly axon_link_generate_messages_cpp)
