--- a/src/taobot_link/package.xml
+++ b/src/taobot_link/package.xml
@@ -46,8 +46,11 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <depend package="tf"/>
-<depend package="nav_msgs"/>
+  <build_depend>tf</build_depend>
+  <build_depend>nav_msgs</build_depend>
+  <run_depend>tf</run_depend>
+  <run_depend>nav_msgs</run_depend>
+
 
 <build_depend>cmake_modules</build_depend>
 <run_depend>cmake_modules</run_depend> 
