--- a/src/taobot_link/move_base_config/costmap_common_params.yaml
+++ b/src/taobot_link/move_base_config/costmap_common_params.yaml
@@ -31,5 +31,5 @@ lethal_cost_threshold: 100
 
 #Configuration for the sensors that the costmap will use to update a map
 observation_sources: scan
-base_scan: {data_type: LaserScan, expected_update_rate: 0.4,
+scan: {data_type: LaserScan, expected_update_rate: 0.4,
   observation_persistence: 0.0, marking: true, clearing: true, max_obstacle_height: 0.4, min_obstacle_height: 0.08}
