--- a/src/taobot_link/move_base_config/base_local_planner_params.yaml
+++ b/src/taobot_link/move_base_config/base_local_planner_params.yaml
@@ -23,7 +23,7 @@ TrajectoryPlannerROS:
   y_vels: [-0.3, -0.1, 0.1, -0.3]
 
   #Set the tolerance on achieving a goal
-  xy_goal_tolerance: 0.1
+  xy_goal_tolerance: 0.25 #changed from 0.1
   yaw_goal_tolerance: 0.05
 
   #We'll configure how long and with what granularity we'll forward simulate trajectories
@@ -46,3 +46,7 @@ TrajectoryPlannerROS:
 
   #Eat up the plan as the robot moves along it
   prune_plan: true
+
+
+  #lingfei's params
+  oscillation_timeout: 5.0
