--- a/src/taobot_link/move_base_config/base_local_planner_params.yaml
+++ b/src/taobot_link/move_base_config/base_local_planner_params.yaml
@@ -17,7 +17,7 @@ TrajectoryPlannerROS:
   escape_vel: -0.1
   
   #For this example, we'll use a holonomic robot
-  holonomic_robot: true
+  holonomic_robot: false
 
   #Since we're using a holonomic robot, we'll set the set of y velocities it will sample
   y_vels: [-0.3, -0.1, 0.1, -0.3]
