--- a/src/taobot_link/move_base_config/base_local_planner_params.yaml
+++ b/src/taobot_link/move_base_config/base_local_planner_params.yaml
@@ -4,11 +4,11 @@
 TrajectoryPlannerROS:
   #Set the acceleration limits of the robot
   acc_lim_th: 3.2 
-  acc_lim_x: 2.5
-  acc_lim_y: 2.5
+  acc_lim_x: 10
+  acc_lim_y: 10
 
   #Set the velocity limits of the robot
-  max_vel_x: 0.65
+  max_vel_x: 10
   min_vel_x: 0.1
   max_rotational_vel: 1.0
   min_in_place_rotational_vel: 0.4
@@ -20,11 +20,11 @@ TrajectoryPlannerROS:
   holonomic_robot: false
 
   #Since we're using a holonomic robot, we'll set the set of y velocities it will sample
-  y_vels: [-0.3, -0.1, 0.1, -0.3]
+
 
   #Set the tolerance on achieving a goal
-  xy_goal_tolerance: 0.25 #changed from 0.1
-  yaw_goal_tolerance: 0.05
+  xy_goal_tolerance: 0.5 #changed from 0.1
+  yaw_goal_tolerance: 1
 
   #We'll configure how long and with what granularity we'll forward simulate trajectories
   sim_time: 1.7
@@ -33,8 +33,8 @@ TrajectoryPlannerROS:
   vtheta_samples: 20
 
   #Parameters for scoring trajectories
-  goal_distance_bias: 0.8
-  path_distance_bias: 0.6
+  pdist_scale: 0.8
+  gdist_scale: 0.6
   occdist_scale: 0.01
   heading_lookahead: 0.325
 
@@ -49,4 +49,4 @@ TrajectoryPlannerROS:
 
 
   #lingfei's params
-  oscillation_timeout: 5.0
+
