--- a/src/taobot_link/package.xml
+++ b/src/taobot_link/package.xml
@@ -42,6 +42,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>cereal_port</build_depend>
   <build_depend>serial</build_depend>
+  <build_depend>ar_track_alvar</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
@@ -49,6 +50,7 @@
   <build_depend>tf</build_depend>
   <build_depend>nav_msgs</build_depend>
   <run_depend>tf</run_depend>
+  <run_depend>ar_track_alvar</run_depend>
   <run_depend>nav_msgs</run_depend>
 
 
