--- a/src/taobot_link/CMakeLists.txt
+++ b/src/taobot_link/CMakeLists.txt
@@ -240,6 +240,9 @@ add_executable(arTrackerReader src/arTrackerReader.cpp)
 add_dependencies(arTrackerReader taobot_link_generate_messages_cpp)
 target_link_libraries(arTrackerReader ${catkin_LIBRARIES})
 
+add_executable(angleTest src/angleTest.cpp)
+add_dependencies(angleTest taobot_link_generate_messages_cpp)
+target_link_libraries(angleTest ${catkin_LIBRARIES})
 ## Mark executables and/or libraries for installation
 #install(TARGETS taobot_link
 #  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
