--- a/src/taobot_link/CMakeLists.txt
+++ b/src/taobot_link/CMakeLists.txt
@@ -248,6 +248,9 @@ add_executable(moveActuator src/moveActuator.cpp)
 add_dependencies(moveActuator taobot_link_generate_messages_cpp)
 target_link_libraries(moveActuator ${catkin_LIBRARIES})
 
+add_executable(stopCtrl src/stopCtrl.cpp)
+add_dependencies(stopCtrl taobot_link_generate_messages_cpp)
+target_link_libraries(stopCtrl ${catkin_LIBRARIES})
 ## Mark executables and/or libraries for installation
 #install(TARGETS taobot_link
 #  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
